--- a/YoutubeDL/storyboards/VideoControlsView.xib
+++ b/YoutubeDL/storyboards/VideoControlsView.xib
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="ipad9_7" orientation="portrait" layout="fullscreen" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -14,6 +15,7 @@
                 <outlet property="timelineBase" destination="j49-Jj-V6t" id="EcC-SS-31y"/>
                 <outlet property="timelineDragGesture" destination="Vzs-3o-9XS" id="LXa-Pe-ARg"/>
                 <outlet property="timelineProgressConstraint" destination="DmX-O7-av0" id="b10-yX-AIb"/>
+                <outlet property="timelineTapGesture" destination="UmB-F6-lx2" id="0Ig-Qx-Zac"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -23,18 +25,18 @@
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="bottom" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QJ0-3C-m6o">
                     <rect key="frame" x="20" y="16" width="32" height="32"/>
-                    <color key="tintColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <color key="tintColor" systemColor="systemGreenColor"/>
                     <inset key="imageEdgeInsets" minX="0.0" minY="-2" maxX="0.0" maxY="0.0"/>
                     <state key="normal" image="play">
                         <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="22" scale="large" weight="black"/>
                     </state>
                 </button>
                 <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="j49-Jj-V6t" userLabel="TimelineBase" customClass="RoundedCornerView" customModule="YoutubeDL" customModuleProvider="target">
-                    <rect key="frame" x="75" y="25" width="456.5" height="14"/>
+                    <rect key="frame" x="75" y="25" width="470" height="14"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9xy-Zb-NaS" userLabel="TimelinePast" customClass="RoundedCornerView" customModule="YoutubeDL" customModuleProvider="target">
                             <rect key="frame" x="0.0" y="0.0" width="0.0" height="14"/>
-                            <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <color key="backgroundColor" systemColor="systemGreenColor"/>
                             <constraints>
                                 <constraint firstAttribute="width" id="DmX-O7-av0"/>
                             </constraints>
@@ -45,7 +47,7 @@
                             </userDefinedRuntimeAttributes>
                         </view>
                     </subviews>
-                    <color key="backgroundColor" systemColor="systemTealColor" red="0.35294117650000001" green="0.7843137255" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <color key="backgroundColor" systemColor="systemTealColor"/>
                     <constraints>
                         <constraint firstItem="9xy-Zb-NaS" firstAttribute="top" secondItem="j49-Jj-V6t" secondAttribute="top" id="1ai-xn-JGc"/>
                         <constraint firstAttribute="height" constant="14" id="YZ8-M6-lJa"/>
@@ -59,17 +61,18 @@
                     </userDefinedRuntimeAttributes>
                     <connections>
                         <outletCollection property="gestureRecognizers" destination="Vzs-3o-9XS" appends="YES" id="Oiq-Zz-Vze"/>
+                        <outletCollection property="gestureRecognizers" destination="UmB-F6-lx2" appends="YES" id="cGz-iy-JyK"/>
                     </connections>
                 </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0:00 / 0:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DHV-M4-GBl" userLabel="Time Label">
-                    <rect key="frame" x="547.5" y="22" width="85.5" height="20.5"/>
+                    <rect key="frame" x="561" y="23.5" width="72" height="17"/>
                     <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WT3-YM-c0H" userLabel="DraggableDot" customClass="RoundedCornerView" customModule="YoutubeDL" customModuleProvider="target">
                     <rect key="frame" x="65" y="22" width="20" height="20"/>
-                    <color key="backgroundColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <color key="backgroundColor" systemColor="systemGrayColor"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="20" id="xll-FT-iFY"/>
                         <constraint firstAttribute="height" constant="20" id="ztX-Ff-6vs"/>
@@ -81,7 +84,7 @@
                     </userDefinedRuntimeAttributes>
                 </view>
             </subviews>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <gestureRecognizers/>
             <constraints>
                 <constraint firstItem="QJ0-3C-m6o" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="8gv-Rf-hH5"/>
@@ -99,9 +102,30 @@
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="474.63768115942031" y="125.22321428571428"/>
         </view>
-        <panGestureRecognizer minimumNumberOfTouches="1" id="Vzs-3o-9XS"/>
+        <tapGestureRecognizer cancelsTouchesInView="NO" delaysTouchesEnded="NO" id="UmB-F6-lx2">
+            <connections>
+                <outlet property="delegate" destination="-1" id="JyM-Li-XtT"/>
+            </connections>
+        </tapGestureRecognizer>
+        <panGestureRecognizer cancelsTouchesInView="NO" delaysTouchesEnded="NO" minimumNumberOfTouches="1" id="Vzs-3o-9XS">
+            <connections>
+                <outlet property="delegate" destination="-1" id="nEA-fO-Rxe"/>
+            </connections>
+        </panGestureRecognizer>
     </objects>
     <resources>
         <image name="play" width="32" height="32"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGrayColor">
+            <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemTealColor">
+            <color red="0.18823529411764706" green="0.69019607843137254" blue="0.7803921568627451" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
     </resources>
 </document>
