--- a/YoutubeDL/controllers/TwitterDLViewController.xib
+++ b/YoutubeDL/controllers/TwitterDLViewController.xib
@@ -27,74 +27,70 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VIw-MO-Blm" customClass="VideoPlayerViewController" customModule="YoutubeDL" customModuleProvider="target">
-                    <rect key="frame" x="10" y="44" width="394" height="245.5"/>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                </view>
-                <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Error Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F1w-QK-TSc">
-                    <rect key="frame" x="176" y="297.5" width="62" height="14.5"/>
-                    <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
-                    <color key="textColor" systemColor="systemRedColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eeg-bj-qMu">
-                    <rect key="frame" x="116.5" y="360" width="181" height="30"/>
-                    <state key="normal" title="Save Video to Camera Roll"/>
-                </button>
-                <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Success Label" textAlignment="center" lineBreakMode="clip" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oh6-Iv-iYe">
-                    <rect key="frame" x="8" y="406" width="398" height="20.5"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" systemColor="systemGreenColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <stackView opaque="NO" contentMode="scaleToFill" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="NrV-PE-gex">
-                    <rect key="frame" x="207" y="457" width="0.0" height="0.0"/>
+                <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" alignment="center" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="NR3-xn-iWj">
+                    <rect key="frame" x="0.0" y="44" width="414" height="359"/>
                     <subviews>
-                        <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="McT-5K-Szz" customClass="FilesizeButton" customModule="YoutubeDL" customModuleProvider="target">
-                            <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
+                        <view contentMode="scaleToFill" verticalCompressionResistancePriority="1000" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="VIw-MO-Blm" customClass="VideoPlayerViewController" customModule="YoutubeDL" customModuleProvider="target">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="279"/>
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="80" id="6aL-zg-9qQ"/>
-                                <constraint firstAttribute="height" constant="80" id="XTA-15-Fz9"/>
-                            </constraints>
                         </view>
-                        <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nuU-72-O04" customClass="FilesizeButton" customModule="YoutubeDL" customModuleProvider="target">
-                            <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
-                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="80" id="afF-lF-Cgl"/>
-                                <constraint firstAttribute="height" constant="80" id="wwF-Ay-YGI"/>
-                            </constraints>
-                        </view>
-                        <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KaF-ah-phh" customClass="FilesizeButton" customModule="YoutubeDL" customModuleProvider="target">
-                            <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
-                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="80" id="BqG-Cm-XkB"/>
-                                <constraint firstAttribute="height" constant="80" id="T4W-ag-reO"/>
-                            </constraints>
-                        </view>
+                        <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Error Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F1w-QK-TSc">
+                            <rect key="frame" x="176" y="291.5" width="62" height="0.0"/>
+                            <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
+                            <color key="textColor" systemColor="systemRedColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eeg-bj-qMu">
+                            <rect key="frame" x="116.5" y="304" width="181" height="30"/>
+                            <state key="normal" title="Save Video to Camera Roll"/>
+                        </button>
+                        <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Success Label" textAlignment="center" lineBreakMode="clip" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oh6-Iv-iYe">
+                            <rect key="frame" x="152" y="346.5" width="110" height="0.0"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <color key="textColor" systemColor="systemGreenColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="NrV-PE-gex">
+                            <rect key="frame" x="207" y="359" width="0.0" height="0.0"/>
+                            <subviews>
+                                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="McT-5K-Szz" customClass="FilesizeButton" customModule="YoutubeDL" customModuleProvider="target">
+                                    <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
+                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="80" id="6aL-zg-9qQ"/>
+                                        <constraint firstAttribute="height" constant="80" id="XTA-15-Fz9"/>
+                                    </constraints>
+                                </view>
+                                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nuU-72-O04" customClass="FilesizeButton" customModule="YoutubeDL" customModuleProvider="target">
+                                    <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
+                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="80" id="afF-lF-Cgl"/>
+                                        <constraint firstAttribute="height" constant="80" id="wwF-Ay-YGI"/>
+                                    </constraints>
+                                </view>
+                                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KaF-ah-phh" customClass="FilesizeButton" customModule="YoutubeDL" customModuleProvider="target">
+                                    <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
+                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="80" id="BqG-Cm-XkB"/>
+                                        <constraint firstAttribute="height" constant="80" id="T4W-ag-reO"/>
+                                    </constraints>
+                                </view>
+                            </subviews>
+                        </stackView>
                     </subviews>
+                    <constraints>
+                        <constraint firstItem="VIw-MO-Blm" firstAttribute="width" secondItem="NR3-xn-iWj" secondAttribute="width" id="uvT-Im-Yoa"/>
+                    </constraints>
                 </stackView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="FQh-RT-Aiu"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="VIw-MO-Blm" firstAttribute="width" secondItem="FQh-RT-Aiu" secondAttribute="width" constant="-20" id="8zv-o3-eAc"/>
-                <constraint firstItem="Oh6-Iv-iYe" firstAttribute="leading" secondItem="FQh-RT-Aiu" secondAttribute="leading" constant="8" id="AI6-NZ-bfo"/>
-                <constraint firstItem="Oh6-Iv-iYe" firstAttribute="centerX" secondItem="eeg-bj-qMu" secondAttribute="centerX" id="BZ2-ku-XAe"/>
-                <constraint firstItem="Oh6-Iv-iYe" firstAttribute="top" secondItem="eeg-bj-qMu" secondAttribute="bottom" constant="16" id="BjD-Xq-U2j"/>
-                <constraint firstItem="eeg-bj-qMu" firstAttribute="centerX" secondItem="FQh-RT-Aiu" secondAttribute="centerX" id="G9y-Lb-1Db"/>
-                <constraint firstItem="eeg-bj-qMu" firstAttribute="top" secondItem="VIw-MO-Blm" secondAttribute="bottom" constant="70.5" id="MWz-bn-t9b"/>
-                <constraint firstItem="FQh-RT-Aiu" firstAttribute="trailing" secondItem="Oh6-Iv-iYe" secondAttribute="trailing" constant="8" id="Nx2-gy-Xa9"/>
-                <constraint firstItem="NrV-PE-gex" firstAttribute="top" secondItem="Oh6-Iv-iYe" secondAttribute="bottom" constant="30.5" id="OBb-0i-nwh"/>
-                <constraint firstItem="NrV-PE-gex" firstAttribute="centerX" secondItem="Oh6-Iv-iYe" secondAttribute="centerX" id="UjQ-ET-UBP"/>
-                <constraint firstItem="F1w-QK-TSc" firstAttribute="centerX" secondItem="FQh-RT-Aiu" secondAttribute="centerX" id="WsC-AD-oUb"/>
-                <constraint firstItem="F1w-QK-TSc" firstAttribute="width" relation="lessThanOrEqual" secondItem="fO9-WW-xd3" secondAttribute="width" constant="40" id="Yfr-Wg-Zsl"/>
-                <constraint firstItem="VIw-MO-Blm" firstAttribute="height" secondItem="FQh-RT-Aiu" secondAttribute="height" multiplier="0.3" id="f32-38-vi0"/>
-                <constraint firstItem="VIw-MO-Blm" firstAttribute="top" secondItem="FQh-RT-Aiu" secondAttribute="top" id="pvh-P3-rje"/>
-                <constraint firstItem="F1w-QK-TSc" firstAttribute="top" secondItem="VIw-MO-Blm" secondAttribute="bottom" constant="8" id="rpD-0B-g2S"/>
-                <constraint firstItem="VIw-MO-Blm" firstAttribute="centerX" secondItem="FQh-RT-Aiu" secondAttribute="centerX" id="wzC-CP-axT"/>
+                <constraint firstItem="FQh-RT-Aiu" firstAttribute="trailing" secondItem="NR3-xn-iWj" secondAttribute="trailing" id="6ML-eV-FpS"/>
+                <constraint firstItem="NR3-xn-iWj" firstAttribute="top" secondItem="FQh-RT-Aiu" secondAttribute="top" id="CnI-cm-E4h"/>
+                <constraint firstItem="FQh-RT-Aiu" firstAttribute="leading" secondItem="NR3-xn-iWj" secondAttribute="leading" id="Gk7-Ej-4u4"/>
             </constraints>
             <point key="canvasLocation" x="131.8840579710145" y="718.52678571428567"/>
         </view>
