--- a/YoutubeDL/storyboards/VideoPlayerViewController.xib
+++ b/YoutubeDL/storyboards/VideoPlayerViewController.xib
@@ -3,40 +3,45 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20037"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="VideoPlayerViewController" customModule="YoutubeDL" customModuleProvider="target">
             <connections>
-                <outlet property="thumbnailView" destination="yrf-Ln-0AU" id="OXN-dA-Q6b"/>
+                <outlet property="aspectRatioConstraint" destination="dq4-OD-aEZ" id="bQf-OA-dYv"/>
+                <outlet property="thumbnailView" destination="ts5-hg-DrL" id="Ytj-Vw-yb6"/>
                 <outlet property="videoControlsView" destination="fZZ-g1-FrK" id="8jR-0m-kks"/>
                 <outlet property="videoPlayerView" destination="vig-1c-2Zb" id="lCf-41-QY8"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="634" height="393"/>
+            <rect key="frame" x="0.0" y="0.0" width="629" height="245"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vig-1c-2Zb" userLabel="VideoPlayerView" customClass="AVVideoPlayerView" customModule="YoutubeDL" customModuleProvider="target">
-                    <rect key="frame" x="5" y="5" width="624" height="324"/>
+                <view contentMode="scaleToFill" verticalCompressionResistancePriority="1000" translatesAutoresizingMaskIntoConstraints="NO" id="vig-1c-2Zb" userLabel="VideoPlayerView" customClass="AVVideoPlayerView" customModule="YoutubeDL" customModuleProvider="target">
+                    <rect key="frame" x="5" y="5" width="619" height="176"/>
                     <subviews>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yrf-Ln-0AU" userLabel="Thumbnail View">
-                            <rect key="frame" x="0.0" y="0.0" width="624" height="324"/>
-                        </imageView>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ts5-hg-DrL" customClass="LazyImageView" customModule="NukeUI">
+                            <rect key="frame" x="0.0" y="0.0" width="619" height="176"/>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <constraints>
+                                <constraint firstAttribute="width" secondItem="ts5-hg-DrL" secondAttribute="height" multiplier="619:176" id="dq4-OD-aEZ"/>
+                            </constraints>
+                        </view>
                     </subviews>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
-                        <constraint firstAttribute="trailing" secondItem="yrf-Ln-0AU" secondAttribute="trailing" id="1f4-2A-FqC"/>
-                        <constraint firstAttribute="bottom" secondItem="yrf-Ln-0AU" secondAttribute="bottom" id="33d-kN-Hte"/>
-                        <constraint firstItem="yrf-Ln-0AU" firstAttribute="leading" secondItem="vig-1c-2Zb" secondAttribute="leading" id="mDS-ef-CQg"/>
-                        <constraint firstItem="yrf-Ln-0AU" firstAttribute="top" secondItem="vig-1c-2Zb" secondAttribute="top" id="scj-dI-gAW"/>
+                        <constraint firstItem="ts5-hg-DrL" firstAttribute="top" secondItem="vig-1c-2Zb" secondAttribute="top" id="Oz6-EZ-KQc"/>
+                        <constraint firstAttribute="trailing" secondItem="ts5-hg-DrL" secondAttribute="trailing" id="Yw0-Xm-vcx"/>
+                        <constraint firstItem="ts5-hg-DrL" firstAttribute="leading" secondItem="vig-1c-2Zb" secondAttribute="leading" id="ent-Ll-5Hl"/>
+                        <constraint firstAttribute="bottom" secondItem="ts5-hg-DrL" secondAttribute="bottom" id="uJr-XH-EqR"/>
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fZZ-g1-FrK" customClass="VideoControlsView" customModule="YoutubeDL" customModuleProvider="target">
-                    <rect key="frame" x="10" y="359" width="614" height="34"/>
+                    <rect key="frame" x="10" y="211" width="609" height="34"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="34" id="EoJ-Uf-3Jr"/>
@@ -55,7 +60,7 @@
             </constraints>
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="297.10144927536237" y="-62.611607142857139"/>
+            <point key="canvasLocation" x="528.26086956521738" y="-104.12946428571428"/>
         </view>
     </objects>
     <resources>
